fixed about me alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -231,6 +231,9 @@ a.down-btn span.fa.fa-angle-down {
 
 #about-me {
   height: auto;
+}
+
+#about-me p {
   text-align: justify;
 }
 
@@ -275,7 +278,7 @@ a.btn.go-to-btn{
 	font-size: 12px;
 	color: #ffffff;
 	transition: all 0.5s;
-  margin: 10px 0px;
+  margin: 4px 0px;
 }
 a.btn.go-to-btn:hover{
 	background: #2aabcf;
